syntax = "proto3";
package main;
option go_package=".;pingpong";

message PingRequest {
}

message PongResponse {
    bool ok = 1;
}

/*
    Force a build
 */
service PingPong{
    rpc Ping(PingRequest) returns (PongResponse) {};
}